Nomogram Fixes
1. Control setting is hidden by default
2. Smoke packs/year removed
3. Axes are ordered accordingly

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -158,6 +158,7 @@ div {
 }
 
 #axisHeightSlider {
+  // min-height: 100px;
   height: 85%;
   width: 80%;
 }
@@ -216,6 +217,7 @@ div {
 .nomogramControlsBox {
   border: 2px solid black;
   border-radius: 5px;
+  display: none;
 }
 
 .navbar-grey {
